--- a/src/pages/gallery/gallery.scss
+++ b/src/pages/gallery/gallery.scss
@@ -15,16 +15,16 @@
 }
 
 .masonry {
-  column-count: 3;
+  column-width: 300px;
   column-gap: 1rem;
-  width: 90%;
-  max-width: 1200px;
+  width: 100%;
   margin: 2rem auto;
+  padding: 0 3rem;
+  box-sizing: border-box;
+  overflow-x: hidden;
 
   img {
-    max-width: 100%;
-    width: auto;
-    height: auto;
+    width: 100%;
     margin-bottom: 1rem;
     border-radius: 8px;
     display: block;
