--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -36,7 +36,7 @@
 
     .nav-link:hover {
       transform: scale(1.05);
-      color: lighten(#e69138, 6);
+      //color: lighten(#e69138, 6);
     }
   }
 
